--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -1,1 +1,23 @@
+#I.  Introduction
+
+
+#II.  Methods
+
+##A.  Data
+
+##B.  Definitions
+
+##C.  Statistical Methods 
+
+
+#III.  Results
+
+
+#IV.  Discussion 
+
+
+#V.  Limitations
+
+
+#VI.  References 
 
