--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -1,3 +1,10 @@
+---
+title: "Traffic Fatalities Project"
+author: "Sarah Salter"
+date: "September 16, 2016"
+output: html_document
+---
+
 #I.  Introduction
 
 
