--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -11,6 +11,9 @@ output: html_document
 #II.  Methods
 
 ##A.  Data
+```
+The data used in this analysis was collected  from the United States Transportation Bureau
+```
 
 ##B.  Definitions
 
