--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -12,6 +12,11 @@ output: html_document
 
 ##A.  Data
 ```
+Fatality Analysis Reporting System (FARS) was created in the United States by the National Highway
+Traffic Safety Administration (NHTSA) to provide an overall measure of highway safety, to help suggest 
+solutions, and to help provide an objective basis to evaluate the effectiveness of motor vehicle safety
+standards and highway safety programs.
+
 FARS contains data on a census of fatal traffic crashes within the 50 States, the District of Columbia,
 and Puerto Rico. To be included in FARS, a crash must involve a motor vehicle traveling on a trafficway 
 customarily open to the public and result in the death of a person (occupant of a vehicle or a 
@@ -26,7 +31,11 @@ of the environment, trafficway, vehicles, and persons involved in the crash.
 
 Fatality Analysis Reporting System (FARS)
 
-The large majority of the data used in this analysis was collected from the United States Transportation Bureau in a  FARS 
+The large majority of the data used in this analysis was collected from the United States Transportation
+Bureau in a  FARS 
+
+
+Street Light Data 
 ```
 
 ##B.  Definitions
@@ -41,6 +50,10 @@ The large majority of the data used in this analysis was collected from the Unit
 
 
 #V.  Limitations
+```
+For privacy reasons, there is very limited information in any of these datasets that could potentially
+tie back to the 
+```
 
 
 #VI.  References 
