--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -76,3 +76,6 @@ potentially tie back to the
 
 #VI.  References 
 
+#VII.  Resources
+
+http://www.aef.com/Scripts/media-player/mediaPlayerMulti?videoName=/adcouncil20071210/john_elliot.mp4&vidNumber=3
